# controller/MovieController.js
@@ -14,6 +14,9 @@ function getWelcomeMessageController(req, res, next) {
 function getRandomMovieController(req, res, next) {
     try {
         const randomMovie = Movie.getRandom();
+         if (!randomMovie) {
+            throw new Error('NoResultsFound'); // Lanzar un error si no se encuentra una película
+        }
         res.status(200).json(randomMovie);
     } catch (error) {
         next(error); // Pasar el error al middleware de manejo de errores
@@ -24,12 +27,14 @@ function getRandomMovieController(req, res, next) {
 function getMovieByIdOrNameController(req, res, next) {
     try {
         const { identifier } = req.params;
+        if (!identifier) {
+            throw new Error('InvalidParameter'); // Validar que el parámetro esté presente
+        }
         const movie = Movie.getByIdOrTitle(identifier);
         if (movie) {
             res.status(200).json(movie);
         } else {
-            const error = new Error('NoResultsFound'); // Lanzar un error si no se encuentra la película
-            next(error);
+            throw new Error('NoResultsFound'); // Lanzar un error si no se encuentra la película
         }
     } catch (error) {
         next(error); // Pasar el error al middleware de manejo de errores
@@ -39,20 +44,31 @@ function getMovieByIdOrNameController(req, res, next) {
 // Controlador para buscar películas por múltiples criterios o género
 function getMoviesController(req, res, next) {
     try {
-        const { name, year, genre } = req.query; // Obtener los parámetros de consulta
+        const { name, year, genre, fromYear, toYear, } = req.query; // Obtener los parámetros de consulta
         const criteria = {};
 
         if (name) criteria.name = name.trim(); // Agregar el criterio 'name' si está presente
-        if (year) criteria.year = year.trim(); // Agregar el criterio 'year' si está presente
+        if (year) {
+            if (isNaN(year)) throw new Error('InvalidYear'); // Validar que el año sea un número
+            criteria.year = year.trim();
+        }
+        if (fromYear) {
+            if (isNaN(fromYear)) throw new Error('InvalidFromYear'); // Validar que 'fromYear' sea un número
+            criteria.fromYear = fromYear.trim();
+        }
+        if (toYear) {
+            if (isNaN(toYear)) throw new Error('InvalidToYear'); // Validar que 'toYear' sea un número
+            criteria.toYear = toYear.trim();
+        }
         if (genre) criteria.genre = genre.trim(); // Agregar el criterio 'genre' si está presente
+        
 
         const movies = Movie.getByCriteria(criteria); // Llama al modelo para filtrar las películas
 
         if (movies.length > 0) {
             res.status(200).json(movies); // Devuelve las películas filtradas
         } else {
-            const error = new Error('NoResultsFound'); // Lanzar un error si no se encuentran películas
-            next(error);
+            throw new Error('NoResultsFound'); // Lanzar un error si no se encuentran películas
         }
     } catch (error) {
         next(error); // Pasar el error al middleware de manejo de errores
